@@ -83,7 +83,7 @@ public class SSTableSimpleUnsortedWriter extends AbstractSSTableSimpleWriter
         // If the CF already exist in memory, we'll just continue adding to it
         if (previous == null)
         {
-            previous = ColumnFamily.create(metadata);
+            previous = ColumnFamily.create(metadata, TreeMapBackedSortedColumns.factory());
             keys.put(currentKey, previous);
         }
         else
