@@ -62,6 +62,8 @@
    (CASSANDRA-2901)
  * make AbstractBounds.normalize support overlapping ranges (CASSANDRA-2641)
  * fix of the CQL count() behavior (CASSANDRA-3068)
+ * use TreeMap backed column families for the SSTable simple writers
+   (CASSANDRA-3148)
 
 0.8.5
  * fix NPE when encryption_options is unspecified (CASSANDRA-3007)
